--- a/home.html
+++ b/home.html
@@ -13,8 +13,15 @@
           display: block;
       }
 
-      .jumbotron{
+      #jumbotron1 {
         background-image: url("img/iphone_bar.jpg");
+        background-size: cover;
+        height: 700px;
+        background-position: center;
+      }
+
+      #jumbotron2 {
+        background-image: url("img/iphone_bar2.jpg");
         background-size: cover;
         height: 700px;
         background-position: center;
@@ -538,8 +545,17 @@
 
 
 <!-- Jumbutron awal -->
-<div class="jumbotron d" style="background-color: aliceblue; font-weight: 600;">
-  <h1 class="d-flex justify-content-center align-items-center" style="color: white;">Iphone 15 Pro</h1>
+<div id="jumbotron1" class="jumbotron" style="background-color: aliceblue; font-weight: 600;">
+  <h1 class="d-flex p-2 justify-content-center align-items-center" style="color: white;">Iphone 15 Pro</h1>
+  <h3 class="d-flex justify-content-center align-items-center" style="font-weight: 500; color: white;">Titanium, So Strong, So Light, So Pro</h3>
+  <div class="d-flex justify-content-center align-items-center">
+    <a class="p-2 " href="#" style="font-size: 1.2rem">Learn More</a>
+    <a class="p-2" href="#" style="font-size: 1.2rem">Buy</a>
+  </div>
+</div>
+<br class="d-flex mt-1">
+<div id="jumbotron2" class="jumbotron" style="background-color: aliceblue; font-weight: 600;">
+  <h1 class="d-flex p-2 justify-content-center align-items-center" style="color: white;">Iphone 15 Pro</h1>
   <h3 class="d-flex justify-content-center align-items-center" style="font-weight: 500; color: white;">Titanium, So Strong, So Light, So Pro</h3>
   <div class="d-flex justify-content-center align-items-center">
     <a class="p-2 " href="#" style="font-size: 1.2rem">Learn More</a>
